@@ -1,0 +1,7 @@
+<%args>
+</%args>
+# Dynamic resolv.conf(5) file for glibc resolver(3) generated by resolvconf(8)
+# and managed by Zentyal.
+#
+#     DO NOT EDIT THIS FILE BY HAND -- YOUR CHANGES WILL BE OVERWRITTEN
+#
