@@ -1,4 +1,5 @@
 HEAD
+	+ Write resolvconf head, base and tail
 	+ Set proper file name for HTTP proxy configuration for APT
 	+ Set HTTP proxy wide settings in /etc/environment
 	+ Do not disable DNSResolver model when users mode is external AD
